[gd_scene load_steps=13 format=2]

[ext_resource path="res://map/map.tres" type="TileSet" id=1]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/level5.gd" type="Script" id=4]
[ext_resource path="res://UI/Heart_Bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/TambahPeluru.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/font/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://menu/popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://menu/popup_dead.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="level5" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1147.0
margin_top = -444.0
margin_right = 2873.0
margin_bottom = 1549.0
color = Color( 0.215686, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 39, 39 )
format = 1
tile_data = PoolIntArray( -262165, 0, 0, -262164, 0, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262160, 0, 0, -262159, 0, 0, -262158, 0, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -327653, 0, 0, -327652, 0, 0, -327651, 0, 0, -327650, 0, 0, -327649, 0, 0, -327648, 0, 0, -327647, 0, 0, -327646, 0, 0, -327645, 0, 0, -327644, 0, 0, -327643, 0, 0, -327642, 0, 0, -327641, 0, 0, -327640, 0, 0, -327639, 0, 0, -327638, 0, 0, -327637, 0, 0, -327636, 0, 0, -327635, 0, 0, -327634, 0, 0, -327633, 0, 0, -327632, 0, 0, -327631, 0, 0, -327630, 0, 0, -327629, 0, 0, -327628, 0, 0, -327627, 0, 0, -327626, 0, 0, -327625, 0, 0, -327624, 0, 0, -327623, 0, 0, -327622, 0, 0, -327621, 0, 0, -327620, 0, 0, -327619, 0, 0, -327618, 0, 0, -196629, 0, 0, -262142, 0, 0, -262132, 0, 0, -262106, 0, 0, -262082, 0, 0, -131093, 0, 0, -196606, 0, 0, -196596, 0, 0, -196570, 0, 0, -196546, 0, 0, -65557, 0, 0, -131070, 0, 0, -131060, 0, 0, -131034, 0, 0, -131019, 0, 0, -131010, 0, 0, -21, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -65534, 0, 0, -65524, 0, 0, -65498, 0, 0, -65483, 0, 0, -65474, 0, 0, 65515, 0, 0, 65521, 0, 0, 2, 0, 0, 12, 0, 0, 29, 0, 0, 38, 0, 0, 53, 0, 0, 62, 0, 0, 131051, 0, 0, 131057, 0, 0, 65538, 0, 0, 65548, 0, 0, 65565, 0, 0, 65574, 0, 0, 65589, 0, 0, 65598, 0, 0, 196587, 0, 0, 196593, 0, 0, 131074, 0, 0, 131084, 0, 0, 131101, 0, 0, 131110, 0, 0, 131125, 0, 0, 131134, 0, 0, 262123, 0, 0, 262129, 0, 0, 196610, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196637, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196661, 0, 0, 196662, 0, 0, 196663, 0, 0, 196664, 0, 0, 196665, 0, 0, 196666, 0, 0, 196667, 0, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 327659, 0, 0, 327665, 0, 0, 262173, 0, 0, 262206, 0, 0, 393195, 0, 0, 393201, 0, 0, 327709, 0, 0, 327742, 0, 0, 458731, 0, 0, 393245, 0, 0, 393278, 0, 0, 524267, 0, 0, 458781, 0, 0, 458814, 0, 0, 589803, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524350, 0, 0, 655339, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589839, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 720875, 0, 0, 655361, 0, 0, 655375, 0, 0, 655415, 0, 0, 655422, 0, 0, 786411, 0, 0, 720897, 0, 0, 720911, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720946, 0, 0, 720947, 0, 0, 720951, 0, 0, 720958, 0, 0, 851947, 0, 0, 786433, 0, 0, 786447, 0, 0, 786487, 0, 0, 786494, 0, 0, 917483, 0, 0, 851969, 0, 0, 851983, 0, 0, 852023, 0, 0, 852030, 0, 0, 983019, 0, 0, 917505, 0, 0, 917519, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917559, 0, 0, 917566, 0, 0, 1048555, 0, 0, 1048564, 0, 0, 1048565, 0, 0, 1048566, 0, 0, 1048567, 0, 0, 1048568, 0, 0, 1048569, 0, 0, 1048570, 0, 0, 1048571, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983055, 0, 0, 983078, 0, 0, 983095, 0, 0, 983102, 0, 0, 1114091, 0, 0, 1048591, 0, 0, 1048598, 0, 0, 1048614, 0, 0, 1048631, 0, 0, 1048638, 0, 0, 1179627, 0, 0, 1114127, 0, 0, 1114134, 0, 0, 1114150, 0, 0, 1114167, 0, 0, 1114174, 0, 0, 1245163, 0, 0, 1179670, 0, 0, 1179686, 0, 0, 1179703, 0, 0, 1179710, 0, 0, 1310699, 0, 0, 1310705, 0, 0, 1310706, 0, 0, 1310707, 0, 0, 1310708, 0, 0, 1310709, 0, 0, 1310710, 0, 0, 1245206, 0, 0, 1245222, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245246, 0, 0, 1376235, 0, 0, 1376241, 0, 0, 1310742, 0, 0, 1310758, 0, 0, 1310778, 0, 0, 1310782, 0, 0, 1441771, 0, 0, 1441777, 0, 0, 1376278, 0, 0, 1376294, 0, 0, 1376314, 0, 0, 1376318, 0, 0, 1507307, 0, 0, 1507313, 0, 0, 1441814, 0, 0, 1441830, 0, 0, 1441850, 0, 0, 1441854, 0, 0, 1572843, 0, 0, 1572849, 0, 0, 1572857, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507386, 0, 0, 1507390, 0, 0, 1638379, 0, 0, 1638385, 0, 0, 1638393, 0, 0, 1572922, 0, 0, 1572926, 0, 0, 1703915, 0, 0, 1703921, 0, 0, 1703929, 0, 0, 1638458, 0, 0, 1638462, 0, 0, 1769451, 0, 0, 1769457, 0, 0, 1769465, 0, 0, 1703987, 0, 0, 1703988, 0, 0, 1703989, 0, 0, 1703990, 0, 0, 1703991, 0, 0, 1703992, 0, 0, 1703993, 0, 0, 1703994, 0, 0, 1703998, 0, 0, 1834987, 0, 0, 1835001, 0, 0, 1769474, 0, 0, 1769475, 0, 0, 1769476, 0, 0, 1769477, 0, 0, 1769478, 0, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 0, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769534, 0, 0, 1900523, 0, 0, 1900537, 0, 0, 1835038, 0, 0, 1835049, 0, 0, 1835070, 0, 0, 1966059, 0, 0, 1966073, 0, 0, 1900574, 0, 0, 1900585, 0, 0, 1900606, 0, 0, 2031595, 0, 0, 2031609, 0, 0, 1966110, 0, 0, 1966121, 0, 0, 1966142, 0, 0, 2097131, 0, 0, 2097145, 0, 0, 2031646, 0, 0, 2031657, 0, 0, 2031678, 0, 0, 2162667, 0, 0, 2162668, 0, 0, 2162669, 0, 0, 2162670, 0, 0, 2162671, 0, 0, 2162672, 0, 0, 2162673, 0, 0, 2162674, 0, 0, 2162675, 0, 0, 2162676, 0, 0, 2162677, 0, 0, 2162678, 0, 0, 2162679, 0, 0, 2162680, 0, 0, 2162681, 0, 0, 2162682, 0, 0, 2162683, 0, 0, 2162684, 0, 0, 2162685, 0, 0, 2162686, 0, 0, 2162687, 0, 0, 2097152, 0, 0, 2097153, 0, 0, 2097154, 0, 0, 2097155, 0, 0, 2097156, 0, 0, 2097157, 0, 0, 2097158, 0, 0, 2097159, 0, 0, 2097160, 0, 0, 2097161, 0, 0, 2097162, 0, 0, 2097163, 0, 0, 2097164, 0, 0, 2097165, 0, 0, 2097166, 0, 0, 2097167, 0, 0, 2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2097200, 0, 0, 2097201, 0, 0, 2097202, 0, 0, 2097203, 0, 0, 2097204, 0, 0, 2097205, 0, 0, 2097206, 0, 0, 2097207, 0, 0, 2097208, 0, 0, 2097209, 0, 0, 2097210, 0, 0, 2097211, 0, 0, 2097212, 0, 0, 2097213, 0, 0, 2097214, 0, 0 )

[node name="TambahPeluru" parent="." instance=ExtResource( 6 )]
position = Vector2( 912.782, 16.3818 )

[node name="TambahPeluru2" parent="." instance=ExtResource( 6 )]
position = Vector2( 2293.42, -32.7636 )

[node name="TambahPeluru3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1400.61, 1171.3 )

[node name="portal" parent="." instance=ExtResource( 7 )]
position = Vector2( 2343.35, 606.128 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( -660.483, 400.293 )
speed = 120

[node name="enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( -667.155, -100.073 )

[node name="enemy2" parent="." instance=ExtResource( 2 )]
position = Vector2( -390.067, 917.625 )

[node name="enemy3" parent="." instance=ExtResource( 2 )]
position = Vector2( 2196.35, 8.00278 )

[node name="spawn_musuh" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bullet" type="Label" parent="CanvasLayer"]
margin_left = 226.0
margin_top = 17.0
margin_right = 330.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Bullet:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_Bar" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 33.0
margin_top = 27.0
margin_right = 73.0
margin_bottom = 67.0

[node name="popup_win" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false
margin_left = -2.0
margin_right = 498.0

[node name="popup_dead" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
pause_mode = 2
anims/fade = SubResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
[connection signal="isi_peluru" from="TambahPeluru" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru2" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru2" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru3" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru3" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="menang" from="portal" to="." method="menang"]
[connection signal="mati" from="player" to="CanvasLayer/Heart_Bar" method="_on_player_mati"]
[connection signal="nembak" from="player" to="." method="_on_player_nembak"]
[connection signal="timeout" from="spawn_musuh" to="." method="_on_spawn_musuh_timeout"]
[connection signal="dead" from="CanvasLayer/Heart_Bar" to="." method="dead"]
[connection signal="main_menu" from="CanvasLayer/popup_dead" to="." method="main_menu"]
[connection signal="retry" from="CanvasLayer/popup_dead" to="." method="retry"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="animation_finished"]
